--- a/package.json
+++ b/package.json
@@ -1,95 +1,63 @@
 {
-  "_from": "@ampproject/remapping@^2.1.0",
-  "_id": "@ampproject/remapping@2.1.2",
+  "_from": "@babel/code-frame@^7.16.7",
+  "_id": "@babel/code-frame@7.16.7",
   "_inBundle": false,
-  "_integrity": "sha512-hoyByceqwKirw7w3Z7gnIIZC3Wx3J484Y3L/cMpXFbr7d9ZQj2mODrirNzcJa+SM3UlpWXYvKV4RlRpFXlWgXg==",
-  "_location": "/@ampproject/remapping",
+  "_integrity": "sha512-iAXqUn8IIeBTNd72xsFlgaXHkMBMt6y4HJp1tIaK465CWLT/fG1aqB7ykr95gHHmlBdGbFeWWfyB4NJJ0nmeIg==",
+  "_location": "/@babel/code-frame",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@ampproject/remapping@^2.1.0",
-    "name": "@ampproject/remapping",
-    "escapedName": "@ampproject%2fremapping",
-    "scope": "@ampproject",
-    "rawSpec": "^2.1.0",
+    "raw": "@babel/code-frame@^7.16.7",
+    "name": "@babel/code-frame",
+    "escapedName": "@babel%2fcode-frame",
+    "scope": "@babel",
+    "rawSpec": "^7.16.7",
     "saveSpec": null,
-    "fetchSpec": "^2.1.0"
+    "fetchSpec": "^7.16.7"
   },
   "_requiredBy": [
-    "/@babel/core"
+    "/@babel/core",
+    "/@babel/template",
+    "/@babel/traverse",
+    "/parse-json"
   ],
-  "_resolved": "https://registry.npmjs.org/@ampproject/remapping/-/remapping-2.1.2.tgz",
-  "_shasum": "4edca94973ded9630d20101cd8559cedb8d8bd34",
-  "_spec": "@ampproject/remapping@^2.1.0",
+  "_resolved": "https://registry.npmjs.org/@babel/code-frame/-/code-frame-7.16.7.tgz",
+  "_shasum": "44416b6bd7624b998f5b1af5d470856c40138789",
+  "_spec": "@babel/code-frame@^7.16.7",
   "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\core",
   "author": {
-    "name": "Justin Ridgewell",
-    "email": "jridgewell@google.com"
+    "name": "The Babel Team",
+    "url": "https://babel.dev/team"
   },
   "bugs": {
-    "url": "https://github.com/ampproject/remapping/issues"
+    "url": "https://github.com/babel/babel/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen"
   },
   "bundleDependencies": false,
   "dependencies": {
-    "@jridgewell/trace-mapping": "^0.3.0"
+    "@babel/highlight": "^7.16.7"
   },
   "deprecated": false,
-  "description": "Remap sequential sourcemaps through transformations to point at the original source code",
+  "description": "Generate errors that contain a code frame that point to source locations.",
   "devDependencies": {
-    "@rollup/plugin-typescript": "8.3.0",
-    "@types/jest": "27.4.0",
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
-    "eslint": "8.8.0",
-    "eslint-config-prettier": "8.3.0",
-    "jest": "27.4.7",
-    "jest-config": "27.4.7",
-    "npm-run-all": "4.1.5",
-    "prettier": "2.5.1",
-    "rollup": "2.67.0",
-    "ts-jest": "27.1.3",
-    "tslib": "2.3.1",
-    "typescript": "4.5.5"
+    "@types/chalk": "^2.0.0",
+    "chalk": "^2.0.0",
+    "strip-ansi": "^4.0.0"
   },
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=6.9.0"
   },
-  "files": [
-    "dist"
-  ],
-  "homepage": "https://github.com/ampproject/remapping#readme",
-  "keywords": [
-    "source",
-    "map",
-    "remap"
-  ],
-  "license": "Apache-2.0",
-  "main": "dist/remapping.umd.js",
-  "module": "dist/remapping.mjs",
-  "name": "@ampproject/remapping",
+  "homepage": "https://babel.dev/docs/en/next/babel-code-frame",
+  "license": "MIT",
+  "main": "./lib/index.js",
+  "name": "@babel/code-frame",
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ampproject/remapping.git"
+    "url": "git+https://github.com/babel/babel.git",
+    "directory": "packages/babel-code-frame"
   },
-  "scripts": {
-    "build": "run-s -n build:*",
-    "build:rollup": "rollup -c rollup.config.js",
-    "build:ts": "tsc --project tsconfig.build.json",
-    "lint": "run-s -n lint:*",
-    "lint:prettier": "npm run test:lint:prettier -- --write",
-    "lint:ts": "npm run test:lint:ts -- --fix",
-    "prebuild": "rm -rf dist",
-    "prepublishOnly": "npm run preversion",
-    "preversion": "run-s test build",
-    "test": "run-s -n test:lint test:only",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "test:lint": "run-s -n test:lint:*",
-    "test:lint:prettier": "prettier --check '{src,test}/**/*.ts'",
-    "test:lint:ts": "eslint '{src,test}/**/*.ts'",
-    "test:only": "jest --coverage",
-    "test:watch": "jest --coverage --watch"
-  },
-  "typings": "dist/types/remapping.d.ts",
-  "version": "2.1.2"
+  "version": "7.16.7"
 }
