--- a/package.json
+++ b/package.json
@@ -1,63 +1,75 @@
 {
-  "_from": "@babel/code-frame@^7.16.7",
-  "_id": "@babel/code-frame@7.16.7",
+  "_from": "@babel/compat-data@^7.17.7",
+  "_id": "@babel/compat-data@7.17.7",
   "_inBundle": false,
-  "_integrity": "sha512-iAXqUn8IIeBTNd72xsFlgaXHkMBMt6y4HJp1tIaK465CWLT/fG1aqB7ykr95gHHmlBdGbFeWWfyB4NJJ0nmeIg==",
-  "_location": "/@babel/code-frame",
+  "_integrity": "sha512-p8pdE6j0a29TNGebNm7NzYZWB3xVZJBZ7XGs42uAKzQo8VQ3F0By/cQCtUEABwIqw5zo6WA4NbmxsfzADzMKnQ==",
+  "_location": "/@babel/compat-data",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@babel/code-frame@^7.16.7",
-    "name": "@babel/code-frame",
-    "escapedName": "@babel%2fcode-frame",
+    "raw": "@babel/compat-data@^7.17.7",
+    "name": "@babel/compat-data",
+    "escapedName": "@babel%2fcompat-data",
     "scope": "@babel",
-    "rawSpec": "^7.16.7",
+    "rawSpec": "^7.17.7",
     "saveSpec": null,
-    "fetchSpec": "^7.16.7"
+    "fetchSpec": "^7.17.7"
   },
   "_requiredBy": [
-    "/@babel/core",
-    "/@babel/template",
-    "/@babel/traverse",
-    "/parse-json"
+    "/@babel/helper-compilation-targets",
+    "/@babel/plugin-proposal-object-rest-spread",
+    "/@babel/preset-env",
+    "/babel-plugin-polyfill-corejs2"
   ],
-  "_resolved": "https://registry.npmjs.org/@babel/code-frame/-/code-frame-7.16.7.tgz",
-  "_shasum": "44416b6bd7624b998f5b1af5d470856c40138789",
-  "_spec": "@babel/code-frame@^7.16.7",
-  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\core",
+  "_resolved": "https://registry.npmjs.org/@babel/compat-data/-/compat-data-7.17.7.tgz",
+  "_shasum": "078d8b833fbbcc95286613be8c716cef2b519fa2",
+  "_spec": "@babel/compat-data@^7.17.7",
+  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\helper-compilation-targets",
   "author": {
     "name": "The Babel Team",
     "url": "https://babel.dev/team"
   },
   "bugs": {
-    "url": "https://github.com/babel/babel/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen"
+    "url": "https://github.com/babel/babel/issues"
   },
   "bundleDependencies": false,
-  "dependencies": {
-    "@babel/highlight": "^7.16.7"
-  },
   "deprecated": false,
-  "description": "Generate errors that contain a code frame that point to source locations.",
+  "description": ">",
   "devDependencies": {
-    "@types/chalk": "^2.0.0",
-    "chalk": "^2.0.0",
-    "strip-ansi": "^4.0.0"
+    "@mdn/browser-compat-data": "^4.0.10",
+    "core-js-compat": "^3.20.2",
+    "electron-to-chromium": "^1.3.893"
   },
   "engines": {
     "node": ">=6.9.0"
   },
-  "homepage": "https://babel.dev/docs/en/next/babel-code-frame",
+  "exports": {
+    "./plugins": "./plugins.js",
+    "./native-modules": "./native-modules.js",
+    "./corejs2-built-ins": "./corejs2-built-ins.js",
+    "./corejs3-shipped-proposals": "./corejs3-shipped-proposals.js",
+    "./overlapping-plugins": "./overlapping-plugins.js",
+    "./plugin-bugfixes": "./plugin-bugfixes.js"
+  },
+  "homepage": "https://github.com/babel/babel#readme",
+  "keywords": [
+    "babel",
+    "compat-table",
+    "compat-data"
+  ],
   "license": "MIT",
-  "main": "./lib/index.js",
-  "name": "@babel/code-frame",
+  "name": "@babel/compat-data",
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/babel/babel.git",
-    "directory": "packages/babel-code-frame"
+    "directory": "packages/babel-compat-data"
   },
-  "version": "7.16.7"
+  "scripts": {
+    "build-data": "./scripts/download-compat-table.sh && node ./scripts/build-data.js && node ./scripts/build-modules-support.js && node ./scripts/build-bugfixes-targets.js"
+  },
+  "version": "7.17.7"
 }
