--- a/package.json
+++ b/package.json
@@ -1,75 +1,60 @@
 {
-  "_from": "@babel/compat-data@^7.17.7",
-  "_id": "@babel/compat-data@7.17.7",
+  "_from": "semver@^6.3.0",
+  "_id": "semver@6.3.0",
   "_inBundle": false,
-  "_integrity": "sha512-p8pdE6j0a29TNGebNm7NzYZWB3xVZJBZ7XGs42uAKzQo8VQ3F0By/cQCtUEABwIqw5zo6WA4NbmxsfzADzMKnQ==",
-  "_location": "/@babel/compat-data",
+  "_integrity": "sha512-b39TBaTSfV6yBrapU89p5fKekE2m/NwnDocOVruQFS1/veMgdzuPcnOM34M6CwxW8jH/lxEa5rBoDeUwu5HHTw==",
+  "_location": "/@babel/core/semver",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@babel/compat-data@^7.17.7",
-    "name": "@babel/compat-data",
-    "escapedName": "@babel%2fcompat-data",
-    "scope": "@babel",
-    "rawSpec": "^7.17.7",
+    "raw": "semver@^6.3.0",
+    "name": "semver",
+    "escapedName": "semver",
+    "rawSpec": "^6.3.0",
     "saveSpec": null,
-    "fetchSpec": "^7.17.7"
+    "fetchSpec": "^6.3.0"
   },
   "_requiredBy": [
-    "/@babel/helper-compilation-targets",
-    "/@babel/plugin-proposal-object-rest-spread",
-    "/@babel/preset-env",
-    "/babel-plugin-polyfill-corejs2"
+    "/@babel/core"
   ],
-  "_resolved": "https://registry.npmjs.org/@babel/compat-data/-/compat-data-7.17.7.tgz",
-  "_shasum": "078d8b833fbbcc95286613be8c716cef2b519fa2",
-  "_spec": "@babel/compat-data@^7.17.7",
-  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\helper-compilation-targets",
-  "author": {
-    "name": "The Babel Team",
-    "url": "https://babel.dev/team"
+  "_resolved": "https://registry.npmjs.org/semver/-/semver-6.3.0.tgz",
+  "_shasum": "ee0a64c8af5e8ceea67687b133761e1becbd1d3d",
+  "_spec": "semver@^6.3.0",
+  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\core",
+  "bin": {
+    "semver": "bin/semver.js"
   },
   "bugs": {
-    "url": "https://github.com/babel/babel/issues"
+    "url": "https://github.com/npm/node-semver/issues"
   },
   "bundleDependencies": false,
   "deprecated": false,
-  "description": ">",
+  "description": "The semantic version parser used by npm.",
   "devDependencies": {
-    "@mdn/browser-compat-data": "^4.0.10",
-    "core-js-compat": "^3.20.2",
-    "electron-to-chromium": "^1.3.893"
+    "tap": "^14.3.1"
   },
-  "engines": {
-    "node": ">=6.9.0"
-  },
-  "exports": {
-    "./plugins": "./plugins.js",
-    "./native-modules": "./native-modules.js",
-    "./corejs2-built-ins": "./corejs2-built-ins.js",
-    "./corejs3-shipped-proposals": "./corejs3-shipped-proposals.js",
-    "./overlapping-plugins": "./overlapping-plugins.js",
-    "./plugin-bugfixes": "./plugin-bugfixes.js"
-  },
-  "homepage": "https://github.com/babel/babel#readme",
-  "keywords": [
-    "babel",
-    "compat-table",
-    "compat-data"
+  "files": [
+    "bin",
+    "range.bnf",
+    "semver.js"
   ],
-  "license": "MIT",
-  "name": "@babel/compat-data",
-  "publishConfig": {
-    "access": "public"
-  },
+  "homepage": "https://github.com/npm/node-semver#readme",
+  "license": "ISC",
+  "main": "semver.js",
+  "name": "semver",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/babel/babel.git",
-    "directory": "packages/babel-compat-data"
+    "url": "git+https://github.com/npm/node-semver.git"
   },
   "scripts": {
-    "build-data": "./scripts/download-compat-table.sh && node ./scripts/build-data.js && node ./scripts/build-modules-support.js && node ./scripts/build-bugfixes-targets.js"
+    "postpublish": "git push origin --follow-tags",
+    "postversion": "npm publish",
+    "preversion": "npm test",
+    "test": "tap"
   },
-  "version": "7.17.7"
+  "tap": {
+    "check-coverage": true
+  },
+  "version": "6.3.0"
 }
