--- a/package.json
+++ b/package.json
@@ -1,69 +1,59 @@
 {
-  "_from": "@babel/generator@^7.17.9",
-  "_id": "@babel/generator@7.17.9",
+  "_from": "@babel/helper-annotate-as-pure@^7.16.7",
+  "_id": "@babel/helper-annotate-as-pure@7.16.7",
   "_inBundle": false,
-  "_integrity": "sha512-rAdDousTwxbIxbz5I7GEQ3lUip+xVCXooZNbsydCWs3xA7ZsYOv+CFRdzGxRX78BmQHu9B1Eso59AOZQOJDEdQ==",
-  "_location": "/@babel/generator",
+  "_integrity": "sha512-s6t2w/IPQVTAET1HitoowRGXooX8mCgtuP5195wD/QJPV6wYjpujCGF7JuMODVX2ZAJOf1GT6DT9MHEZvLOFSw==",
+  "_location": "/@babel/helper-annotate-as-pure",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@babel/generator@^7.17.9",
-    "name": "@babel/generator",
-    "escapedName": "@babel%2fgenerator",
+    "raw": "@babel/helper-annotate-as-pure@^7.16.7",
+    "name": "@babel/helper-annotate-as-pure",
+    "escapedName": "@babel%2fhelper-annotate-as-pure",
     "scope": "@babel",
-    "rawSpec": "^7.17.9",
+    "rawSpec": "^7.16.7",
     "saveSpec": null,
-    "fetchSpec": "^7.17.9"
+    "fetchSpec": "^7.16.7"
   },
   "_requiredBy": [
-    "/@babel/core",
-    "/@babel/traverse"
+    "/@babel/helper-create-class-features-plugin",
+    "/@babel/helper-create-regexp-features-plugin",
+    "/@babel/helper-remap-async-to-generator",
+    "/@babel/plugin-proposal-private-property-in-object",
+    "/@babel/plugin-transform-classes"
   ],
-  "_resolved": "https://registry.npmjs.org/@babel/generator/-/generator-7.17.9.tgz",
-  "_shasum": "f4af9fd38fa8de143c29fce3f71852406fc1e2fc",
-  "_spec": "@babel/generator@^7.17.9",
-  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\core",
+  "_resolved": "https://registry.npmjs.org/@babel/helper-annotate-as-pure/-/helper-annotate-as-pure-7.16.7.tgz",
+  "_shasum": "bb2339a7534a9c128e3102024c60760a3a7f3862",
+  "_spec": "@babel/helper-annotate-as-pure@^7.16.7",
+  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\helper-remap-async-to-generator",
   "author": {
     "name": "The Babel Team",
     "url": "https://babel.dev/team"
   },
   "bugs": {
-    "url": "https://github.com/babel/babel/issues?utf8=%E2%9C%93&q=is%3Aissue+label%3A%22pkg%3A%20generator%22+is%3Aopen"
+    "url": "https://github.com/babel/babel/issues"
   },
   "bundleDependencies": false,
   "dependencies": {
-    "@babel/types": "^7.17.0",
-    "jsesc": "^2.5.1",
-    "source-map": "^0.5.0"
+    "@babel/types": "^7.16.7"
   },
   "deprecated": false,
-  "description": "Turns an AST into code.",
-  "devDependencies": {
-    "@babel/helper-fixtures": "^7.17.0",
-    "@babel/parser": "^7.17.9",
-    "@jridgewell/trace-mapping": "^0.3.4",
-    "@types/jsesc": "^2.5.0",
-    "@types/source-map": "^0.5.0",
-    "charcodes": "^0.2.0"
-  },
+  "description": "Helper function to annotate paths and nodes with #__PURE__ comment",
   "engines": {
     "node": ">=6.9.0"
   },
-  "files": [
-    "lib"
-  ],
-  "homepage": "https://babel.dev/docs/en/next/babel-generator",
+  "homepage": "https://babel.dev/docs/en/next/babel-helper-annotate-as-pure",
   "license": "MIT",
   "main": "./lib/index.js",
-  "name": "@babel/generator",
+  "name": "@babel/helper-annotate-as-pure",
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/babel/babel.git",
-    "directory": "packages/babel-generator"
+    "directory": "packages/babel-helper-annotate-as-pure"
   },
-  "version": "7.17.9"
+  "version": "7.16.7"
 }
