--- a/package.json
+++ b/package.json
@@ -1,32 +1,28 @@
 {
-  "_from": "@babel/helper-annotate-as-pure@^7.16.7",
-  "_id": "@babel/helper-annotate-as-pure@7.16.7",
+  "_from": "@babel/helper-builder-binary-assignment-operator-visitor@^7.16.7",
+  "_id": "@babel/helper-builder-binary-assignment-operator-visitor@7.16.7",
   "_inBundle": false,
-  "_integrity": "sha512-s6t2w/IPQVTAET1HitoowRGXooX8mCgtuP5195wD/QJPV6wYjpujCGF7JuMODVX2ZAJOf1GT6DT9MHEZvLOFSw==",
-  "_location": "/@babel/helper-annotate-as-pure",
+  "_integrity": "sha512-C6FdbRaxYjwVu/geKW4ZeQ0Q31AftgRcdSnZ5/jsH6BzCJbtvXvhpfkbkThYSuutZA7nCXpPR6AD9zd1dprMkA==",
+  "_location": "/@babel/helper-builder-binary-assignment-operator-visitor",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@babel/helper-annotate-as-pure@^7.16.7",
-    "name": "@babel/helper-annotate-as-pure",
-    "escapedName": "@babel%2fhelper-annotate-as-pure",
+    "raw": "@babel/helper-builder-binary-assignment-operator-visitor@^7.16.7",
+    "name": "@babel/helper-builder-binary-assignment-operator-visitor",
+    "escapedName": "@babel%2fhelper-builder-binary-assignment-operator-visitor",
     "scope": "@babel",
     "rawSpec": "^7.16.7",
     "saveSpec": null,
     "fetchSpec": "^7.16.7"
   },
   "_requiredBy": [
-    "/@babel/helper-create-class-features-plugin",
-    "/@babel/helper-create-regexp-features-plugin",
-    "/@babel/helper-remap-async-to-generator",
-    "/@babel/plugin-proposal-private-property-in-object",
-    "/@babel/plugin-transform-classes"
+    "/@babel/plugin-transform-exponentiation-operator"
   ],
-  "_resolved": "https://registry.npmjs.org/@babel/helper-annotate-as-pure/-/helper-annotate-as-pure-7.16.7.tgz",
-  "_shasum": "bb2339a7534a9c128e3102024c60760a3a7f3862",
-  "_spec": "@babel/helper-annotate-as-pure@^7.16.7",
-  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\helper-remap-async-to-generator",
+  "_resolved": "https://registry.npmjs.org/@babel/helper-builder-binary-assignment-operator-visitor/-/helper-builder-binary-assignment-operator-visitor-7.16.7.tgz",
+  "_shasum": "38d138561ea207f0f69eb1626a418e4f7e6a580b",
+  "_spec": "@babel/helper-builder-binary-assignment-operator-visitor@^7.16.7",
+  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\plugin-transform-exponentiation-operator",
   "author": {
     "name": "The Babel Team",
     "url": "https://babel.dev/team"
@@ -36,24 +32,25 @@
   },
   "bundleDependencies": false,
   "dependencies": {
+    "@babel/helper-explode-assignable-expression": "^7.16.7",
     "@babel/types": "^7.16.7"
   },
   "deprecated": false,
-  "description": "Helper function to annotate paths and nodes with #__PURE__ comment",
+  "description": "Helper function to build binary assignment operator visitors",
   "engines": {
     "node": ">=6.9.0"
   },
-  "homepage": "https://babel.dev/docs/en/next/babel-helper-annotate-as-pure",
+  "homepage": "https://babel.dev/docs/en/next/babel-helper-builder-binary-assignment-operator-visitor",
   "license": "MIT",
   "main": "./lib/index.js",
-  "name": "@babel/helper-annotate-as-pure",
+  "name": "@babel/helper-builder-binary-assignment-operator-visitor",
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/babel/babel.git",
-    "directory": "packages/babel-helper-annotate-as-pure"
+    "directory": "packages/babel-helper-builder-binary-assignment-operator-visitor"
   },
   "version": "7.16.7"
 }
