--- a/package.json
+++ b/package.json
@@ -1,60 +1,78 @@
 {
-  "_from": "semver@^6.3.0",
-  "_id": "semver@6.3.0",
+  "_from": "@babel/helper-compilation-targets@^7.17.7",
+  "_id": "@babel/helper-compilation-targets@7.17.7",
   "_inBundle": false,
-  "_integrity": "sha512-b39TBaTSfV6yBrapU89p5fKekE2m/NwnDocOVruQFS1/veMgdzuPcnOM34M6CwxW8jH/lxEa5rBoDeUwu5HHTw==",
-  "_location": "/@babel/helper-compilation-targets/semver",
+  "_integrity": "sha512-UFzlz2jjd8kroj0hmCFV5zr+tQPi1dpC2cRsDV/3IEW8bJfCPrPpmcSN6ZS8RqIq4LXcmpipCQFPddyFA5Yc7w==",
+  "_location": "/@babel/helper-compilation-targets",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "semver@^6.3.0",
-    "name": "semver",
-    "escapedName": "semver",
-    "rawSpec": "^6.3.0",
+    "raw": "@babel/helper-compilation-targets@^7.17.7",
+    "name": "@babel/helper-compilation-targets",
+    "escapedName": "@babel%2fhelper-compilation-targets",
+    "scope": "@babel",
+    "rawSpec": "^7.17.7",
     "saveSpec": null,
-    "fetchSpec": "^6.3.0"
+    "fetchSpec": "^7.17.7"
   },
   "_requiredBy": [
-    "/@babel/helper-compilation-targets"
+    "/@babel/core",
+    "/@babel/helper-define-polyfill-provider",
+    "/@babel/plugin-proposal-object-rest-spread",
+    "/@babel/plugin-transform-function-name",
+    "/@babel/preset-env"
   ],
-  "_resolved": "https://registry.npmjs.org/semver/-/semver-6.3.0.tgz",
-  "_shasum": "ee0a64c8af5e8ceea67687b133761e1becbd1d3d",
-  "_spec": "semver@^6.3.0",
-  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\helper-compilation-targets",
-  "bin": {
-    "semver": "bin/semver.js"
+  "_resolved": "https://registry.npmjs.org/@babel/helper-compilation-targets/-/helper-compilation-targets-7.17.7.tgz",
+  "_shasum": "a3c2924f5e5f0379b356d4cfb313d1414dc30e46",
+  "_spec": "@babel/helper-compilation-targets@^7.17.7",
+  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\core",
+  "author": {
+    "name": "The Babel Team",
+    "url": "https://babel.dev/team"
   },
   "bugs": {
-    "url": "https://github.com/npm/node-semver/issues"
+    "url": "https://github.com/babel/babel/issues"
   },
   "bundleDependencies": false,
-  "deprecated": false,
-  "description": "The semantic version parser used by npm.",
-  "devDependencies": {
-    "tap": "^14.3.1"
+  "dependencies": {
+    "@babel/compat-data": "^7.17.7",
+    "@babel/helper-validator-option": "^7.16.7",
+    "browserslist": "^4.17.5",
+    "semver": "^6.3.0"
   },
-  "files": [
-    "bin",
-    "range.bnf",
-    "semver.js"
+  "deprecated": false,
+  "description": "Helper functions on Babel compilation targets",
+  "devDependencies": {
+    "@babel/core": "^7.17.7",
+    "@babel/helper-plugin-test-runner": "^7.16.7",
+    "@types/semver": "^5.5.0"
+  },
+  "engines": {
+    "node": ">=6.9.0"
+  },
+  "exports": {
+    ".": "./lib/index.js",
+    "./package.json": "./package.json"
+  },
+  "homepage": "https://github.com/babel/babel#readme",
+  "keywords": [
+    "babel",
+    "babel-plugin"
   ],
-  "homepage": "https://github.com/npm/node-semver#readme",
-  "license": "ISC",
-  "main": "semver.js",
-  "name": "semver",
+  "license": "MIT",
+  "main": "./lib/index.js",
+  "name": "@babel/helper-compilation-targets",
+  "peerDependencies": {
+    "@babel/core": "^7.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/npm/node-semver.git"
+    "url": "git+https://github.com/babel/babel.git",
+    "directory": "packages/babel-helper-compilation-targets"
   },
-  "scripts": {
-    "postpublish": "git push origin --follow-tags",
-    "postversion": "npm publish",
-    "preversion": "npm test",
-    "test": "tap"
-  },
-  "tap": {
-    "check-coverage": true
-  },
-  "version": "6.3.0"
+  "version": "7.17.7"
 }
