--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "_from": "@babel/helper-create-class-features-plugin@^7.16.7",
-  "_id": "@babel/helper-create-class-features-plugin@7.17.9",
+  "_from": "@babel/helper-create-regexp-features-plugin@^7.16.7",
+  "_id": "@babel/helper-create-regexp-features-plugin@7.17.0",
   "_inBundle": false,
-  "_integrity": "sha512-kUjip3gruz6AJKOq5i3nC6CoCEEF/oHH3cp6tOZhB+IyyyPyW0g1Gfsxn3mkk6S08pIA2y8GQh609v9G/5sHVQ==",
-  "_location": "/@babel/helper-create-class-features-plugin",
+  "_integrity": "sha512-awO2So99wG6KnlE+TPs6rn83gCz5WlEePJDTnLEqbchMVrBeAujURVphRdigsk094VhvZehFoNOihSlcBjwsXA==",
+  "_location": "/@babel/helper-create-regexp-features-plugin",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@babel/helper-create-class-features-plugin@^7.16.7",
-    "name": "@babel/helper-create-class-features-plugin",
-    "escapedName": "@babel%2fhelper-create-class-features-plugin",
+    "raw": "@babel/helper-create-regexp-features-plugin@^7.16.7",
+    "name": "@babel/helper-create-regexp-features-plugin",
+    "escapedName": "@babel%2fhelper-create-regexp-features-plugin",
     "scope": "@babel",
     "rawSpec": "^7.16.7",
     "saveSpec": null,
     "fetchSpec": "^7.16.7"
   },
   "_requiredBy": [
-    "/@babel/plugin-proposal-class-properties",
-    "/@babel/plugin-proposal-class-static-block",
-    "/@babel/plugin-proposal-private-methods",
-    "/@babel/plugin-proposal-private-property-in-object"
+    "/@babel/plugin-proposal-unicode-property-regex",
+    "/@babel/plugin-transform-dotall-regex",
+    "/@babel/plugin-transform-named-capturing-groups-regex",
+    "/@babel/plugin-transform-unicode-regex"
   ],
-  "_resolved": "https://registry.npmjs.org/@babel/helper-create-class-features-plugin/-/helper-create-class-features-plugin-7.17.9.tgz",
-  "_shasum": "71835d7fb9f38bd9f1378e40a4c0902fdc2ea49d",
-  "_spec": "@babel/helper-create-class-features-plugin@^7.16.7",
-  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\plugin-proposal-class-properties",
+  "_resolved": "https://registry.npmjs.org/@babel/helper-create-regexp-features-plugin/-/helper-create-regexp-features-plugin-7.17.0.tgz",
+  "_shasum": "1dcc7d40ba0c6b6b25618997c5dbfd310f186fe1",
+  "_spec": "@babel/helper-create-regexp-features-plugin@^7.16.7",
+  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\plugin-proposal-unicode-property-regex",
   "author": {
     "name": "The Babel Team",
     "url": "https://babel.dev/team"
@@ -36,20 +36,13 @@
   "bundleDependencies": false,
   "dependencies": {
     "@babel/helper-annotate-as-pure": "^7.16.7",
-    "@babel/helper-environment-visitor": "^7.16.7",
-    "@babel/helper-function-name": "^7.17.9",
-    "@babel/helper-member-expression-to-functions": "^7.17.7",
-    "@babel/helper-optimise-call-expression": "^7.16.7",
-    "@babel/helper-replace-supers": "^7.16.7",
-    "@babel/helper-split-export-declaration": "^7.16.7"
+    "regexpu-core": "^5.0.1"
   },
   "deprecated": false,
-  "description": "Compile class public and private fields, private methods and decorators to ES6",
+  "description": "Compile ESNext Regular Expressions to ES5",
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/helper-plugin-test-runner": "^7.16.7",
-    "@babel/plugin-syntax-class-static-block": "^7.14.5",
-    "@babel/preset-env": "^7.16.11"
+    "@babel/core": "^7.17.0",
+    "@babel/helper-plugin-test-runner": "^7.16.7"
   },
   "engines": {
     "node": ">=6.9.0"
@@ -61,7 +54,7 @@
   ],
   "license": "MIT",
   "main": "./lib/index.js",
-  "name": "@babel/helper-create-class-features-plugin",
+  "name": "@babel/helper-create-regexp-features-plugin",
   "peerDependencies": {
     "@babel/core": "^7.0.0"
   },
@@ -71,7 +64,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/babel/babel.git",
-    "directory": "packages/babel-helper-create-class-features-plugin"
+    "directory": "packages/babel-helper-create-regexp-features-plugin"
   },
-  "version": "7.17.9"
+  "version": "7.17.0"
 }
