--- a/package.json
+++ b/package.json
@@ -1,60 +1,92 @@
 {
-  "_from": "semver@^6.1.2",
-  "_id": "semver@6.3.0",
+  "_from": "@babel/helper-define-polyfill-provider@^0.3.1",
+  "_id": "@babel/helper-define-polyfill-provider@0.3.1",
   "_inBundle": false,
-  "_integrity": "sha512-b39TBaTSfV6yBrapU89p5fKekE2m/NwnDocOVruQFS1/veMgdzuPcnOM34M6CwxW8jH/lxEa5rBoDeUwu5HHTw==",
-  "_location": "/@babel/helper-define-polyfill-provider/semver",
+  "_integrity": "sha512-J9hGMpJQmtWmj46B3kBHmL38UhJGhYX7eqkcq+2gsstyYt341HmPeWspihX43yVRA0mS+8GGk2Gckc7bY/HCmA==",
+  "_location": "/@babel/helper-define-polyfill-provider",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "semver@^6.1.2",
-    "name": "semver",
-    "escapedName": "semver",
-    "rawSpec": "^6.1.2",
+    "raw": "@babel/helper-define-polyfill-provider@^0.3.1",
+    "name": "@babel/helper-define-polyfill-provider",
+    "escapedName": "@babel%2fhelper-define-polyfill-provider",
+    "scope": "@babel",
+    "rawSpec": "^0.3.1",
     "saveSpec": null,
-    "fetchSpec": "^6.1.2"
+    "fetchSpec": "^0.3.1"
   },
   "_requiredBy": [
-    "/@babel/helper-define-polyfill-provider"
+    "/babel-plugin-polyfill-corejs2",
+    "/babel-plugin-polyfill-corejs3",
+    "/babel-plugin-polyfill-regenerator"
   ],
-  "_resolved": "https://registry.npmjs.org/semver/-/semver-6.3.0.tgz",
-  "_shasum": "ee0a64c8af5e8ceea67687b133761e1becbd1d3d",
-  "_spec": "semver@^6.1.2",
-  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\helper-define-polyfill-provider",
-  "bin": {
-    "semver": "bin/semver.js"
+  "_resolved": "https://registry.npmjs.org/@babel/helper-define-polyfill-provider/-/helper-define-polyfill-provider-0.3.1.tgz",
+  "_shasum": "52411b445bdb2e676869e5a74960d2d3826d2665",
+  "_spec": "@babel/helper-define-polyfill-provider@^0.3.1",
+  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\babel-plugin-polyfill-corejs2",
+  "browser": {
+    "./lib/node/dependencies.js": "./lib/browser/dependencies.js",
+    "./src/node/dependencies.js": "./src/browser/dependencies.js"
   },
   "bugs": {
-    "url": "https://github.com/npm/node-semver/issues"
+    "url": "https://github.com/babel/babel-polyfills/issues"
   },
   "bundleDependencies": false,
-  "deprecated": false,
-  "description": "The semantic version parser used by npm.",
-  "devDependencies": {
-    "tap": "^14.3.1"
+  "dependencies": {
+    "@babel/helper-compilation-targets": "^7.13.0",
+    "@babel/helper-module-imports": "^7.12.13",
+    "@babel/helper-plugin-utils": "^7.13.0",
+    "@babel/traverse": "^7.13.0",
+    "debug": "^4.1.1",
+    "lodash.debounce": "^4.0.8",
+    "resolve": "^1.14.2",
+    "semver": "^6.1.2"
   },
-  "files": [
-    "bin",
-    "range.bnf",
-    "semver.js"
+  "deprecated": false,
+  "description": "Babel helper to create your own polyfill provider",
+  "devDependencies": {
+    "@babel/cli": "^7.11.5",
+    "@babel/core": "^7.13.0",
+    "@babel/generator": "^7.11.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "rollup": "^2.3.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
+  },
+  "exports": {
+    ".": [
+      {
+        "import": {
+          "node": "./esm/index.node.mjs",
+          "browser": "./esm/index.browser.mjs"
+        },
+        "default": "./lib/index.js"
+      },
+      "./lib/index.js"
+    ],
+    "./package.json": "./package.json"
+  },
+  "gitHead": "f5eb1c6d74fa29afdb0a3a533dfc5742557197bc",
+  "homepage": "https://github.com/babel/babel-polyfills#readme",
+  "keywords": [
+    "babel-plugin"
   ],
-  "homepage": "https://github.com/npm/node-semver#readme",
-  "license": "ISC",
-  "main": "semver.js",
-  "name": "semver",
+  "license": "MIT",
+  "main": "lib/index.js",
+  "name": "@babel/helper-define-polyfill-provider",
+  "peerDependencies": {
+    "@babel/core": "^7.4.0-0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/npm/node-semver.git"
+    "url": "git+https://github.com/babel/babel-polyfills.git",
+    "directory": "packages/babel-helper-define-polyfill-provider"
   },
-  "scripts": {
-    "postpublish": "git push origin --follow-tags",
-    "postversion": "npm publish",
-    "preversion": "npm test",
-    "test": "tap"
-  },
-  "tap": {
-    "check-coverage": true
-  },
-  "version": "6.3.0"
+  "version": "0.3.1"
 }
