--- a/package.json
+++ b/package.json
@@ -1,92 +1,58 @@
 {
-  "_from": "@babel/helper-define-polyfill-provider@^0.3.1",
-  "_id": "@babel/helper-define-polyfill-provider@0.3.1",
+  "_from": "@babel/helper-explode-assignable-expression@^7.16.7",
+  "_id": "@babel/helper-explode-assignable-expression@7.16.7",
   "_inBundle": false,
-  "_integrity": "sha512-J9hGMpJQmtWmj46B3kBHmL38UhJGhYX7eqkcq+2gsstyYt341HmPeWspihX43yVRA0mS+8GGk2Gckc7bY/HCmA==",
-  "_location": "/@babel/helper-define-polyfill-provider",
+  "_integrity": "sha512-KyUenhWMC8VrxzkGP0Jizjo4/Zx+1nNZhgocs+gLzyZyB8SHidhoq9KK/8Ato4anhwsivfkBLftky7gvzbZMtQ==",
+  "_location": "/@babel/helper-explode-assignable-expression",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@babel/helper-define-polyfill-provider@^0.3.1",
-    "name": "@babel/helper-define-polyfill-provider",
-    "escapedName": "@babel%2fhelper-define-polyfill-provider",
+    "raw": "@babel/helper-explode-assignable-expression@^7.16.7",
+    "name": "@babel/helper-explode-assignable-expression",
+    "escapedName": "@babel%2fhelper-explode-assignable-expression",
     "scope": "@babel",
-    "rawSpec": "^0.3.1",
+    "rawSpec": "^7.16.7",
     "saveSpec": null,
-    "fetchSpec": "^0.3.1"
+    "fetchSpec": "^7.16.7"
   },
   "_requiredBy": [
-    "/babel-plugin-polyfill-corejs2",
-    "/babel-plugin-polyfill-corejs3",
-    "/babel-plugin-polyfill-regenerator"
+    "/@babel/helper-builder-binary-assignment-operator-visitor"
   ],
-  "_resolved": "https://registry.npmjs.org/@babel/helper-define-polyfill-provider/-/helper-define-polyfill-provider-0.3.1.tgz",
-  "_shasum": "52411b445bdb2e676869e5a74960d2d3826d2665",
-  "_spec": "@babel/helper-define-polyfill-provider@^0.3.1",
-  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\babel-plugin-polyfill-corejs2",
-  "browser": {
-    "./lib/node/dependencies.js": "./lib/browser/dependencies.js",
-    "./src/node/dependencies.js": "./src/browser/dependencies.js"
+  "_resolved": "https://registry.npmjs.org/@babel/helper-explode-assignable-expression/-/helper-explode-assignable-expression-7.16.7.tgz",
+  "_shasum": "12a6d8522fdd834f194e868af6354e8650242b7a",
+  "_spec": "@babel/helper-explode-assignable-expression@^7.16.7",
+  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\helper-builder-binary-assignment-operator-visitor",
+  "author": {
+    "name": "The Babel Team",
+    "url": "https://babel.dev/team"
   },
   "bugs": {
-    "url": "https://github.com/babel/babel-polyfills/issues"
+    "url": "https://github.com/babel/babel/issues"
   },
   "bundleDependencies": false,
   "dependencies": {
-    "@babel/helper-compilation-targets": "^7.13.0",
-    "@babel/helper-module-imports": "^7.12.13",
-    "@babel/helper-plugin-utils": "^7.13.0",
-    "@babel/traverse": "^7.13.0",
-    "debug": "^4.1.1",
-    "lodash.debounce": "^4.0.8",
-    "resolve": "^1.14.2",
-    "semver": "^6.1.2"
+    "@babel/types": "^7.16.7"
   },
   "deprecated": false,
-  "description": "Babel helper to create your own polyfill provider",
+  "description": "Helper function to explode an assignable expression",
   "devDependencies": {
-    "@babel/cli": "^7.11.5",
-    "@babel/core": "^7.13.0",
-    "@babel/generator": "^7.11.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
-    "babel-loader": "^8.1.0",
-    "rollup": "^2.3.2",
-    "rollup-plugin-babel": "^4.4.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "@babel/traverse": "^7.16.7"
   },
-  "exports": {
-    ".": [
-      {
-        "import": {
-          "node": "./esm/index.node.mjs",
-          "browser": "./esm/index.browser.mjs"
-        },
-        "default": "./lib/index.js"
-      },
-      "./lib/index.js"
-    ],
-    "./package.json": "./package.json"
+  "engines": {
+    "node": ">=6.9.0"
   },
-  "gitHead": "f5eb1c6d74fa29afdb0a3a533dfc5742557197bc",
-  "homepage": "https://github.com/babel/babel-polyfills#readme",
-  "keywords": [
-    "babel-plugin"
-  ],
+  "homepage": "https://babel.dev/docs/en/next/babel-helper-explode-assignable-expression",
   "license": "MIT",
-  "main": "lib/index.js",
-  "name": "@babel/helper-define-polyfill-provider",
-  "peerDependencies": {
-    "@babel/core": "^7.4.0-0"
-  },
+  "main": "./lib/index.js",
+  "name": "@babel/helper-explode-assignable-expression",
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/babel/babel-polyfills.git",
-    "directory": "packages/babel-helper-define-polyfill-provider"
+    "url": "git+https://github.com/babel/babel.git",
+    "directory": "packages/babel-helper-explode-assignable-expression"
   },
-  "version": "0.3.1"
+  "version": "7.16.7"
 }
