--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "_from": "@babel/helper-explode-assignable-expression@^7.16.7",
-  "_id": "@babel/helper-explode-assignable-expression@7.16.7",
+  "_from": "@babel/helper-function-name@^7.17.9",
+  "_id": "@babel/helper-function-name@7.17.9",
   "_inBundle": false,
-  "_integrity": "sha512-KyUenhWMC8VrxzkGP0Jizjo4/Zx+1nNZhgocs+gLzyZyB8SHidhoq9KK/8Ato4anhwsivfkBLftky7gvzbZMtQ==",
-  "_location": "/@babel/helper-explode-assignable-expression",
+  "_integrity": "sha512-7cRisGlVtiVqZ0MW0/yFB4atgpGLWEHUVYnb448hZK4x+vih0YO5UoS11XIYtZYqHd0dIPMdUSv8q5K4LdMnIg==",
+  "_location": "/@babel/helper-function-name",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@babel/helper-explode-assignable-expression@^7.16.7",
-    "name": "@babel/helper-explode-assignable-expression",
-    "escapedName": "@babel%2fhelper-explode-assignable-expression",
+    "raw": "@babel/helper-function-name@^7.17.9",
+    "name": "@babel/helper-function-name",
+    "escapedName": "@babel%2fhelper-function-name",
     "scope": "@babel",
-    "rawSpec": "^7.16.7",
+    "rawSpec": "^7.17.9",
     "saveSpec": null,
-    "fetchSpec": "^7.16.7"
+    "fetchSpec": "^7.17.9"
   },
   "_requiredBy": [
-    "/@babel/helper-builder-binary-assignment-operator-visitor"
+    "/@babel/helper-create-class-features-plugin",
+    "/@babel/helper-wrap-function",
+    "/@babel/plugin-transform-classes",
+    "/@babel/plugin-transform-function-name",
+    "/@babel/traverse"
   ],
-  "_resolved": "https://registry.npmjs.org/@babel/helper-explode-assignable-expression/-/helper-explode-assignable-expression-7.16.7.tgz",
-  "_shasum": "12a6d8522fdd834f194e868af6354e8650242b7a",
-  "_spec": "@babel/helper-explode-assignable-expression@^7.16.7",
-  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\helper-builder-binary-assignment-operator-visitor",
+  "_resolved": "https://registry.npmjs.org/@babel/helper-function-name/-/helper-function-name-7.17.9.tgz",
+  "_shasum": "136fcd54bc1da82fcb47565cf16fd8e444b1ff12",
+  "_spec": "@babel/helper-function-name@^7.17.9",
+  "_where": "C:\\laragon\\www\\agenceweb\\node_modules\\@babel\\traverse",
   "author": {
     "name": "The Babel Team",
     "url": "https://babel.dev/team"
@@ -32,27 +36,25 @@
   },
   "bundleDependencies": false,
   "dependencies": {
-    "@babel/types": "^7.16.7"
+    "@babel/template": "^7.16.7",
+    "@babel/types": "^7.17.0"
   },
   "deprecated": false,
-  "description": "Helper function to explode an assignable expression",
-  "devDependencies": {
-    "@babel/traverse": "^7.16.7"
-  },
+  "description": "Helper function to change the property 'name' of every function",
   "engines": {
     "node": ">=6.9.0"
   },
-  "homepage": "https://babel.dev/docs/en/next/babel-helper-explode-assignable-expression",
+  "homepage": "https://babel.dev/docs/en/next/babel-helper-function-name",
   "license": "MIT",
   "main": "./lib/index.js",
-  "name": "@babel/helper-explode-assignable-expression",
+  "name": "@babel/helper-function-name",
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/babel/babel.git",
-    "directory": "packages/babel-helper-explode-assignable-expression"
+    "directory": "packages/babel-helper-function-name"
   },
-  "version": "7.16.7"
+  "version": "7.17.9"
 }
